--- a/PMS_Project/Views/Shared/_Layout.cshtml
+++ b/PMS_Project/Views/Shared/_Layout.cshtml
@@ -20,10 +20,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Userlist">Registration List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="NewRegistration">New Registration</a>
                         </li>
                     </ul>
                 </div>
@@ -37,7 +37,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted bg-white">
         <div class="container">
             &copy; 2024 - PMS_Project - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
