--- a/PMS_Project/Views/User/NewRegistration.cshtml
+++ b/PMS_Project/Views/User/NewRegistration.cshtml
@@ -4,64 +4,99 @@
     ViewData["Title"] = "NewRegistration";
 }
 
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        
-        <form asp-action="NewRegistration">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EmailAddress" class="control-label"></label>
-                <input asp-for="EmailAddress" class="form-control" />
-                <span asp-validation-for="EmailAddress" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EmployeeId" class="control-label"></label>
-                <input asp-for="EmployeeId" class="form-control" />
-                <span asp-validation-for="EmployeeId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RoleId" class="control-label"></label>
-                <select asp-for="RoleId" class="form-control" asp-items="ViewBag.Roles">
-                    <option value="">-- Select a Role --</option>
-                </select>
-                <span asp-validation-for="RoleId" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
-                </label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-            <br />
-            @{
-                if (TempData["SuccessMsg"] != null)
-                {
-                    <p class="alert-success">@TempData["SuccessMsg"]</p>
-                }
-            }
-        </form>
-    </div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    @* <title>Document</title> *@
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+    <style>
+        body {
+            background: #1a1a1a;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
 
-<div>
-    <a asp-action="Userlist">Back to List</a>
-</div>
+        input {
+            margin-bottom: 15px;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid black;
+            background-color: #d8d8d8;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 border border-secondary rounded offset-4 mt-5">
+                <br />
+                <h3 class="text-light text-center">New Registration</h3>
+                <br />
+                <form asp-action="NewRegistration">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        @* <label asp-for="UserId" class="control-label"></label> *@
+                        <input asp-for="UserId" class="form-control" placeholder="Enter UserID" />
+                        <span asp-validation-for="UserId" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        @* <label asp-for="Password" class="control-label"></label> *@
+                        <input asp-for="Password" class="form-control" placeholder="Enter password" type="password" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        @* <label asp-for="Name" class="control-label"></label> *@
+                        <input asp-for="Name" class="form-control" placeholder="Enter FullName" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        @* <label asp-for="EmailAddress" class="control-label"></label> *@
+                        <input asp-for="EmailAddress" class="form-control" placeholder="Enter EmailAddress" type="email" />
+                        <span asp-validation-for="EmailAddress" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        @* <label asp-for="EmployeeId" class="control-label"></label> *@
+                        <input asp-for="EmployeeId" class="form-control" placeholder="Enter EmployeeId" />
+                        <span asp-validation-for="EmployeeId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        @* <label asp-for="RoleId" class="control-label"></label> *@
+                        <select asp-for="RoleId" class="form-control" asp-items="ViewBag.Roles">
+                            <option value="">-- Select a Role --</option>
+                        </select>
+                        <span asp-validation-for="RoleId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group form-check text-center text-light mt-3">
+                        <label class="form-check-label">
+                            <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-success" style="width:100%" />
+                    </div>
+                    <br />
+                    @{
+                        if (TempData["SuccessMsg"] != null)
+                        {
+                            <p class="alert-success">@TempData["SuccessMsg"]</p>
+                        }
+                    }
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+
+    @* <div>
+        <a asp-action="Userlist">Back to List</a>
+    </div> *@
+</body>
+</html>
+
 
