--- a/PMS_Project/Views/User/Userlist.cshtml
+++ b/PMS_Project/Views/User/Userlist.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Userlist";
 }
 
-<h1>Userlist</h1>
+@* <h1>Userlist</h1> *@
 
-<p>
+@* <p>
     <a asp-action="NewRegistration">Create New</a>
-</p>
-<table class="table">
+</p> *@
+<table class="table table-bordered border-secondary text-center">
     <thead>
         <tr>
             <th>
@@ -18,9 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.UserId)
             </th>
-            <th>
+            @* <th>
                 @Html.DisplayNameFor(model => model.Password)
-            </th>
+            </th> *@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
@@ -42,7 +42,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.IsActive)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -54,9 +54,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.UserId)
             </td>
-            <td>
+            @* <td>
                 @Html.DisplayFor(modelItem => item.Password)
-            </td>
+            </td> *@
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
@@ -81,6 +81,7 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
                 @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
