--- a/PMS_Project/Views/User/NewRegistration.cshtml
+++ b/PMS_Project/Views/User/NewRegistration.cshtml
@@ -13,10 +13,27 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
     <style>
         body {
-            background: #1a1a1a;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            background-color: #1a1a1a;
+            margin: 0;
+            padding: 0;
+        }
+
+        .card {
+            background-color: #d5d4d4;
+            border-radius: 8px;
+            padding: 30px;
+            width: 400px;
+        }
+
+        h3 {
+            color: #1a50a0;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
         }
 
         input {
@@ -26,16 +43,25 @@
             border: 1px solid black;
             background-color: #d8d8d8;
         }
+
+        button {
+            background-color: #1b81da;
+            color: #fff;
+            padding: 10px;
+            border-radius: 8px;
+        }
+
+            button:hover {
+                background-color: #0741ac;
+            }
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 border border-secondary rounded offset-4 mt-5">
-                <br />
-                <h3 class="text-light text-center">New Registration</h3>
-                <br />
+    <div class="offset-4 mt-5">
+        <div class="card">
+            <div @* class="col-md-4 border border-secondary rounded offset-4 mt-5" *@>
+                <h3>New Registration</h3>
                 <form asp-action="NewRegistration">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
@@ -43,7 +69,6 @@
                         <input asp-for="UserId" class="form-control" placeholder="Enter UserID" />
                         <span asp-validation-for="UserId" class="text-danger"></span>
                     </div>
-
                     <div class="form-group">
                         @* <label asp-for="Password" class="control-label"></label> *@
                         <input asp-for="Password" class="form-control" placeholder="Enter password" type="password" />
@@ -71,15 +96,15 @@
                         </select>
                         <span asp-validation-for="RoleId" class="text-danger"></span>
                     </div>
-                    <div class="form-group form-check text-center text-light mt-3">
+                    <div class="form-group form-check text-center mt-3">
                         <label class="form-check-label">
                             <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                         </label>
                     </div>
-                    <div class="form-group">
+                    <button type="submit">Registration</button>
+                    @* <div class="form-group">
                         <input type="submit" value="Create" class="btn btn-success" style="width:100%" />
-                    </div>
-                    <br />
+                    </div> *@
                     @{
                         if (TempData["SuccessMsg"] != null)
                         {
