--- a/PMS_Project/Views/User/Login.cshtml
+++ b/PMS_Project/Views/User/Login.cshtml
@@ -3,6 +3,10 @@
 @{
     ViewData["Title"] = "Login";
 }
+@{
+    // Layout = null;
+    Layout = "~/Views/Shared/_MyLayout.cshtml";
+}
 
 <!DOCTYPE html>
 <html lang="en">
