--- a/PMS_Project/Views/Home/Index.cshtml
+++ b/PMS_Project/Views/Home/Index.cshtml
@@ -2,6 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
+@{
+    // Layout = null;
+    Layout = "~/Views/Shared/_MyLayout.cshtml";
+}
+
 <div class="text-center mt-5 mb-5">
     <h1 class="display-4 mt-auto">WELCOME TO OUR PMS PORTAL</h1>
     @* <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p> *@
