--- a/PMS_Project/Views/User/ChangePassword.cshtml
+++ b/PMS_Project/Views/User/ChangePassword.cshtml
@@ -3,45 +3,98 @@
 @{
     ViewData["Title"] = "ChangePassword";
 }
-
+@{
+    // Layout = null;
+    // Layout = "~/Views/Shared/_MyLayout.cshtml";
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    @* <title>Document</title> *@
+    <style>
+        body {
+            background-color: #1a1a1a;
+            margin: 0;
+            padding: 0;
+        }
+
+        .card {
+            background-color: #d5d4d4;
+            border-radius: 8px;
+            padding: 30px;
+            width: 400px;
+        }
+
+        h3 {
+            color: #1a50a0;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+
+        input {
+            margin-bottom: 15px;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid black;
+            background-color: #d8d8d8;
+        }
+
+        button {
+            background-color: #1b81da;
+            color: #fff;
+            padding: 10px;
+            border-radius: 8px;
+        }
+
+            button:hover {
+                background-color: #0741ac;
+            }
+    </style>
 </head>
 <body>
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-action="ChangePassword">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="UserId" class="control-label"></label>
-                    <input asp-for="UserId" class="form-control" />
-                    <span asp-validation-for="UserId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="OldPassword" class="control-label"></label>
-                    <input asp-for="OldPassword" class="form-control" />
-                    <span asp-validation-for="OldPassword" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="NewPassword" class="control-label"></label>
-                    <input asp-for="NewPassword" class="form-control" />
-                    <span asp-validation-for="NewPassword" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="RetypeNewPassword" class="control-label"></label>
-                    <input asp-for="RetypeNewPassword" class="form-control" />
-                    <span asp-validation-for="RetypeNewPassword" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
-            </form>
+    <div class="offset-4 mt-5">
+        <div class="card">
+            <div class="">
+                <h3>Change Password</h3>
+                <form asp-action="ChangePassword">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        @* <label asp-for="UserId" class="control-label"></label> *@
+                        <input asp-for="UserId" class="form-control" placeholder="Enter Your UserID" />
+                        <span asp-validation-for="UserId" class="text-danger"></span>
+                        <span class="text-danger">@TempData["Error2"]</span>
+                    </div>
+                    <div class="form-group">
+                        @* <label asp-for="OldPassword" class="control-label"></label> *@
+                        <input asp-for="OldPassword" class="form-control" placeholder="Enter Your Password" />
+                        <span asp-validation-for="OldPassword" class="text-danger"></span>
+                        <span class="text-danger">@TempData["Error1"]</span>
+                    </div>
+                    <div class="form-group">
+                        @* <label asp-for="NewPassword" class="control-label"></label> *@
+                        <input asp-for="NewPassword" class="form-control" placeholder="Enter Your New Password" />
+                        <span asp-validation-for="NewPassword" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        @* <label asp-for="RetypeNewPassword" class="control-label"></label> *@
+                        <input asp-for="RetypeNewPassword" class="form-control" placeholder="Enter Your Confirm Password" />
+                        <span asp-validation-for="RetypeNewPassword" class="text-danger"></span>
+                    </div>
+                    <button type="submit">Change Password</button>
+                    @* <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                    </div> *@
+                </form>
+            </div>
         </div>
     </div>
+    
 
     @* <div>
         <a asp-action="Index">Back to List</a>
