--- a/PMS_Project/Views/Shared/_MyLayout.cshtml
+++ b/PMS_Project/Views/Shared/_MyLayout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PMS_Project.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
@@ -38,8 +39,9 @@
     </div>
 
     <footer class="border-top footer text-muted bg-white">
-        <div class="container">
-            &copy; 2024 - PMS_Project - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container text-center">
+            @* &copy; 2024 - PMS_Project - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> *@
+            Made with <i class="bi bi-heart-fill"></i> by Rohit Goswami
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
