--- a/PMS_Project/Views/Shared/_Layout.cshtml
+++ b/PMS_Project/Views/Shared/_Layout.cshtml
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - PMS_Project</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PMS_Project.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-primary border-bottom box-shadow mb-3" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PMS_Project</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PMS</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,17 +21,26 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Userlist">Registration List</a>
+                            <a class="nav-link " asp-area="" asp-controller="User" asp-action="Userlist">Registration List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="NewRegistration">New Registration</a>
+                            <a class="nav-link " asp-area="" asp-controller="User" asp-action="NewRegistration">New Registration</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="ChangePassword">Change Password</a>
+                            <a class="nav-link " asp-area="" asp-controller="User" asp-action="ChangePassword">Change Password</a>
                         </li>
-                        @* <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Logout">Logout</a>
-                        </li> *@
+                        <li class="nav-item">
+                            <a class="nav-link " asp-area="" asp-controller="Assessment" asp-action="AllAssess">Assessment List</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " asp-area="" asp-controller="Assessment" asp-action="NewAssess">Create Assessment</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " asp-area="" asp-controller="Assessment" asp-action="CStudy">Case Study</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " asp-area="" asp-controller="Review" asp-action="Review">Review Content</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -44,7 +53,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted bg-white">
+    <footer class="border-top footer text-muted bg-primary" data-bs-theme="dark">
         <div class="container text-center">
             @* &copy; 2024 - PMS_Project - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> *@
             Made with <i class="bi bi-heart-fill"></i> by Rohit Goswami
