--- a/PMS_Project/Views/User/ChangePassword.cshtml
+++ b/PMS_Project/Views/User/ChangePassword.cshtml
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #1a1a1a;
+            /* background-color: #1a1a1a; */
             margin: 0;
             padding: 0;
         }
