--- a/PMS_Project/Views/User/Login.cshtml
+++ b/PMS_Project/Views/User/Login.cshtml
@@ -16,7 +16,8 @@
     @* <title>Document</title> *@
     <style>
         body {
-            background-color: #1a1a1a;
+            /* background-color: #1a1a1a; */
+            /* background: linear-gradient(135deg, #8a2be2, #4169e1); */
             margin: 0;
             padding: 0;
            
