--- a/PMS_Project/Views/User/NewRegistration.cshtml
+++ b/PMS_Project/Views/User/NewRegistration.cshtml
@@ -3,17 +3,20 @@
 @{
     ViewData["Title"] = "NewRegistration";
 }
-
+@{
+    // Layout = null;
+    // Layout = "~/Views/Shared/_MyLayout.cshtml";
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @* <title>Document</title> *@
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+    @* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" /> *@
     <style>
         body {
-            background-color: #1a1a1a;
+            /* background-color: #1a1a1a; */
             margin: 0;
             padding: 0;
         }
