--- a/PMS_Project/Views/User/ChangePassword.cshtml
+++ b/PMS_Project/Views/User/ChangePassword.cshtml
@@ -72,13 +72,13 @@
                     </div>
                     <div class="form-group">
                         @* <label asp-for="OldPassword" class="control-label"></label> *@
-                        <input asp-for="OldPassword" class="form-control" placeholder="Enter Your Password" />
+                        <input asp-for="OldPassword" class="form-control" placeholder="Enter Your Password" type="password" />
                         <span asp-validation-for="OldPassword" class="text-danger"></span>
                         <span class="text-danger">@TempData["Error1"]</span>
                     </div>
                     <div class="form-group">
                         @* <label asp-for="NewPassword" class="control-label"></label> *@
-                        <input asp-for="NewPassword" class="form-control" placeholder="Enter Your New Password" />
+                        <input asp-for="NewPassword" class="form-control" placeholder="Enter Your New Password" type="password" />
                         <span asp-validation-for="NewPassword" class="text-danger"></span>
                     </div>
                     <div class="form-group">
@@ -95,10 +95,6 @@
         </div>
     </div>
     
-
-    @* <div>
-        <a asp-action="Index">Back to List</a>
-    </div> *@
 </body>
 </html>
 
