--- a/PMS_Project/Views/User/Login.cshtml
+++ b/PMS_Project/Views/User/Login.cshtml
@@ -76,7 +76,7 @@
                     </div>
                     <div class="form-group">
                         @* <label asp-for="Password" class="control-label"></label> *@
-                        <input asp-for="Password" class="form-control" placeholder="Enter Your Password"/>
+                        <input asp-for="Password" class="form-control" placeholder="Enter Your Password" type="password"/>
                         <span asp-validation-for="Password" class="text-danger"></span>
                         <span class="text-danger">@TempData["Error1"]</span>
                     </div>
@@ -88,12 +88,7 @@
             </div>
         </div>
     </div>
-    
-
-    @* <div>
-        <a asp-action="Index">Back to List</a>
-    </div> *@
-
+  
 </body>
 </html>
 
