--- a/PMS_Project/Views/Assessment/CSSolution.cshtml
+++ b/PMS_Project/Views/Assessment/CSSolution.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "CSSolution";
 }
 
-<h1>CSSolution</h1>
+<h3 class="text-center">Case Study Solutions</h3>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
 <table class="table table-bordered border-secondary text-center">
     <thead>
         <tr>
