--- a/PMS_Project/Views/Assessment/CStudy.cshtml
+++ b/PMS_Project/Views/Assessment/CStudy.cshtml
@@ -5,8 +5,9 @@
 }
 
 <p>
-    <a asp-action="Create">Create New</a>
+    Click <a asp-action="CSSolution" style="text-decoration:none"> here </a> to see case study solution
 </p>
+
 <table class="table table-bordered border-secondary text-center">
     <thead>
         <tr>
