--- a/PMS_Project/Views/Assessment/NewAssess.cshtml
+++ b/PMS_Project/Views/Assessment/NewAssess.cshtml
@@ -4,36 +4,86 @@
     ViewData["Title"] = "NewAssess";
 }
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="NewAssess">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="AssessmentName" class="control-label"></label>
-                <input asp-for="AssessmentName" class="form-control" />
-                <span asp-validation-for="AssessmentName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Active" /> @Html.DisplayNameFor(model => model.Active)
-                </label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<style>
+    body {
+        /* background-color: #1a1a1a; */
+        margin: 0;
+        padding: 0;
+    }
+
+    .card {
+        background-color: #d5d4d4;
+        border-radius: 8px;
+        padding: 30px;
+        width: 400px;
+    }
+
+    h3 {
+        color: #1a50a0;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    input {
+        margin-bottom: 15px;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid black;
+        background-color: #d8d8d8;
+    }
+
+    button {
+        background-color: #1b81da;
+        color: #fff;
+        padding: 10px;
+        border-radius: 8px;
+    }
+
+        button:hover {
+            background-color: #0741ac;
+        }
+</style>
+
+<div class="offset-4 mt-5">
+    <div class="card">
+        <h3>Create Assessment</h3>
+        <div class="">
+            <form asp-action="NewAssess">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    @* <label asp-for="AssessmentName" class="control-label"></label> *@
+                    <input asp-for="AssessmentName" class="form-control" />
+                    <span asp-validation-for="AssessmentName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    @* <label asp-for="Date" class="control-label"></label> *@
+                    <input asp-for="Date" class="form-control" />
+                    <span asp-validation-for="Date" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    @* <label asp-for="Description" class="control-label"></label> *@
+                    <input asp-for="Description" class="form-control" />
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+                <div class="form-group form-check text-center mt-1">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="Active" /> @Html.DisplayNameFor(model => model.Active)
+                    </label>
+                </div>
+                <button type="submit">Create</button>
+                @* <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div> *@
+            </form>
+        </div>
     </div>
 </div>
+
 
 
 
