--- a/PMS_Project/Views/User/ChangePassword.cshtml
+++ b/PMS_Project/Views/User/ChangePassword.cshtml
@@ -12,6 +12,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#btn").click(function () {
+
+                var flag = true;
+
+                var np = $("#NewPassword").val();
+                var rnp = $("#RetypeNewPassword").val();
+
+                if (np != rnp) {
+                    flag = false;
+                    alert("New Password and Confirm Password should be same");
+                }
+                return flag;
+
+            });
+        });
+    </script>
     <style>
         body {
             /* background-color: #1a1a1a; */
@@ -86,7 +105,7 @@
                         <input asp-for="RetypeNewPassword" class="form-control" placeholder="Enter Your Confirm Password" />
                         <span asp-validation-for="RetypeNewPassword" class="text-danger"></span>
                     </div>
-                    <button type="submit">Change Password</button>
+                    <button type="submit" id="btn" name="btn">Change Password</button>
                     @* <div class="form-group">
                         <input type="submit" value="Create" class="btn btn-primary" />
                     </div> *@
